force-app/main/default/objects/Automation_Control_History__c/Automation_Control_History__c.object-meta.xml
<CustomObject>
    <description>Audit and rollback history for Automation Control Center bulk metadata actions.</description>
    <label>Automation Control History</label>
    <nameField>
        <displayFormat>ACH-{000000}</displayFormat>
        <label>Automation Control History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automation Control Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>