force-app/main/default/objects/Automation_Control_History__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>The type of action captured by this history row.</description>
    <label>Action Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk Disable</fullName>
            </value>
            <value>
                <fullName>Bulk Re-enable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>