force-app/main/default/objects/Automation_Control_History__c/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <description>Correlates all history rows created by the same bulk action.</description>
    <label>Batch Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>