force-app/main/default/objects/Automation_Control_History__c/fields/Disabled_By__c.field-meta.xml
<CustomField>
    <fullName>Disabled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who initiated the bulk disable/deactivate action.</description>
    <label>Disabled By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Automation Control Disable History</relationshipLabel>
    <relationshipName>Automation_Control_Disable_History</relationshipName>
    <type>Lookup</type>
</CustomField>