force-app/main/default/objects/Automation_Control_History__c/fields/Disabled_Date__c.field-meta.xml
<CustomField>
    <fullName>Disabled_Date__c</fullName>
    <description>Date and time when the app attempted the disable/deactivate action.</description>
    <label>Disabled Date</label>
    <type>DateTime</type>
</CustomField>