force-app/main/default/objects/Automation_Control_History__c/fields/Is_Reenabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Reenabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this disabled item has been processed by a re-enable action.</description>
    <label>Is Reenabled</label>
    <type>Checkbox</type>
</CustomField>