force-app/main/default/objects/Automation_Control_History__c/fields/Metadata_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Metadata_API_Name__c</fullName>
    <description>API name of the validation rule or flow.</description>
    <label>Metadata API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>