force-app/main/default/objects/Automation_Control_History__c/fields/Metadata_Backup_JSON__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Backup_JSON__c</fullName>
    <description>Compact JSON snapshot used for audit and rollback context.</description>
    <label>Metadata Backup JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>