force-app/main/default/objects/Automation_Control_History__c/fields/Metadata_Component_Id__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Component_Id__c</fullName>
    <description>Tooling API Id of the metadata component at the time of action.</description>
    <label>Metadata Component Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>