force-app/main/default/objects/Automation_Control_History__c/fields/Metadata_Label__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Label__c</fullName>
    <description>Display label for the metadata component when available.</description>
    <label>Metadata Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>