force-app/main/default/objects/Automation_Control_History__c/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName>
    <description>Status after the app attempted the action.</description>
    <label>New Status</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>