force-app/main/default/objects/Automation_Control_History__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Object API name for validation rules. Blank for org-level flow rows.</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>