force-app/main/default/objects/Automation_Control_History__c/fields/Object_Label__c.field-meta.xml
<CustomField>
    <fullName>Object_Label__c</fullName>
    <description>Object label for validation rules.</description>
    <label>Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>