force-app/main/default/objects/Automation_Control_History__c/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <description>Status before the app attempted the action.</description>
    <label>Previous Status</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>