force-app/main/default/objects/Automation_Control_History__c/fields/Previous_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Version_Number__c</fullName>
    <description>Active flow version number before a bulk deactivate action.</description>
    <label>Previous Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>