force-app/main/default/objects/Automation_Control_History__c/fields/Reenabled_By__c.field-meta.xml
<CustomField>
    <fullName>Reenabled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who initiated the bulk re-enable action.</description>
    <label>Reenabled By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Automation Control Reenable History</relationshipLabel>
    <relationshipName>Automation_Control_Reenable_History</relationshipName>
    <type>Lookup</type>
</CustomField>