force-app/main/default/objects/Automation_Control_History__c/fields/Reenabled_Date__c.field-meta.xml
<CustomField>
    <fullName>Reenabled_Date__c</fullName>
    <description>Date and time when this item was re-enabled or marked resolved by a re-enable operation.</description>
    <label>Reenabled Date</label>
    <type>DateTime</type>
</CustomField>